Fix alignment of title and body in Pfam-style tooltips

--- a/trunk/PfamWeb/root/static/css/pfam.css
+++ b/trunk/PfamWeb/root/static/css/pfam.css
@@ -893,7 +893,7 @@ h2.padded {
   background: #074987;
   color: #cbdced;
   font-weight: bold;
-  padding: 0 0.4em;
+  padding: 0 0.2em;
 }
 
 .prototip .tooltip .content {
